--- a/SSHARP_package/SSHAARP/vignettes/vignette.Rmd
+++ b/SSHARP_package/SSHAARP/vignettes/vignette.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "SSHAARP: Searching Shared HLA Amino Acid Residue Prevalence"
 author: "Livia Tran - livtran@chori.org"
-date: "July 12, 2019"
+date: "July 27, 2019"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Using POULD}
+  %\VignetteIndexEntry{SSHAARP Vignette}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
@@ -15,43 +15,43 @@ knitr::opts_chunk$set(echo = TRUE)
 # Overview
 The Searching Shared HLA Amino Acid Residue Prevalence (SSHAARP) Package processes amino acid alignments produced by the IPD-IMGT/HLA Database to identify user-defined amino acid residue motifs shared across HLA alleles, and calculates the frequencies of those motifs based on HLA allele frequency data. SSHAARP uses Generic Mapping Tools (GMT) software and the GMT R Package to generate global frequency heat maps that illustrate the distribution of each user-defined map around the globe. SSHAARP analyzes the allele frequency data described in Solberg et al. 2008, a global set of 497 population samples from 185 published datasets, representing 66,800 individuals.
 
-Future plans for SSHAARP include producing heat maps based on allelic frequencies obtained from the Allele Frequency Net Database (AFND).
+Future plans for SSHAARP include producing heat maps based on allelic frequencies obtained from the Allele Frequency Net Database (AFND). 
 
 Latest amino acid alignments can be found at https://github.com/ANHIG/IMGTHLA/tree/Latest/alignments.
 
-The Solberg (Solberg et al, "Balancing selection and heterogeneity across the classical human leukocyte antigen loci: A meta-analytic review of 497 population studies", Hum Immunol (2008), doi: 10.1016/j.humimm.2008.05.001) dataset can be found at http://pypop.org/popdata/ under results.zip.
+The required Solberg dataset (See: doi: 10.1016/j.humimm.2008.05.001) file is the 1-locus-alleles.dat file in the results.zip archive at http://pypop.org/popdata/.
 
-SSHAARP has three main families of functions that are based on which pieces of information/software they interact with:
+SSHAARP's functions interact with two external datasets and one R package:
 
 1. IPD-IMGT/HLA:
     
-    **countSpaces** counts the number of whitespaces in the ANHIG alignment files to discern where the alignment start is.
+    **countSpaces()** counts the number of whitespaces in the ANHIG alignment files to discern where the alignment start is.
     
-    **AA_segments_maker** extracts alignment sequence information for a given locus from the ANHIG/IMGTHLA Github Repository to produce a dataframe, which contains individual amino acid data for each amino acid position for all alleles, for a user-defined HLA locus or loci. 
+    **buildAAsegments()** extracts alignment sequence information for a given locus from the ANHIG/IMGTHLA Github repository to produce a dataframe of amino acid sequence data for each individual peptide position for all alleles.
     
-      **motif_finder** isolates the individual amino acid position dataframe produced by AA_segments_maker to only alleles with the user-defined motif. 
+      **findMotif** isolates the individual amino acid position dataframe produced by buildAAsegments() to only alleles with the user-defined motif. 
       
 2. Solberg Dataset:
 
-      **coordinate_converter** converts coordinates in the Solberg dataset with cardinal directions to their appropriate enumerations (i.e. 50S is converted to -50)
+      **convertCoordinates()** converts coordinates in the Solberg dataset with cardinal directions to their appropriate enumerations (i.e. 50S is converted to -50)
   
-      **dataSubset** manipulates the Solberg dataset by adding in a new column containing locus*allele information, reordering the dataset based on population name, and subsetting the data to only the locus of interest.
+      **dataSubset()()** manipulates the Solberg dataset by adding in a new column containing locus*allele information, reordering the dataset based on population name, and subsetting the data to only the locus of interest.
   
 3. Generic Mapping Tools (GMT)
 
-      **PALM** produces a heatmap from the further manipulated Solberg dataset by using the Generic Mapping Tools (GMT) R Package, which is an interface between R and the GMT Map-Making software. GMT commands are called via a Bash script through using the gmt.system() function in the GMT R package. Users must have the GMT R package **AND** GMT software installed, which is downloadable here: https://www.soest.hawaii.edu/gmt/.
+      **PALM()()** applies the Generic Mapping Tools (gmt) R package to the modified Solberg data to produce heatmaps. The gmt R package is an interface between R and the GMT Map-Making software, and is required for the PALM()() function. GMT commands are called via a Bash script through using the gmt.system() function in the GMT R package. Both the gmt R package **AND** GMT software must be installed to run SSHAARP, which is available here: https://www.soest.hawaii.edu/gmt/.
   
 ---
 
 ## Functions
 
-### AA_segments_maker
-AA_segments_maker extracts alignment sequence information for a given locus from the ANHIG/IMGTHLA Github Repository to produce a dataframe, which contains individual amino acid data for each amino acid position for all alleles, for a user-defined HLA locus or loci. The first 4 columns are locus, allele, trimmed allele, and allele_name.
+### buildAAsegments()
+buildAAsegments() extracts alignment sequence information for a given locus from the ANHIG/IMGTHLA Github Repository to produce a dataframe, which contains individual amino acid data for each amino acid position for all alleles, for a user-defined HLA locus or loci. The first 4 columns are locus, allele, trimmed allele, and allele_name.
 
-Example output of AA_segments_maker for HLA-A, where the selected row outputs are 2, 549, and 800 to illustrate different HLA-A alleles, and selected columns are the first 20 columns of the dataframe, where the first 4 columns consist of the locus, allele, trimmed_allele of 2 fields, and the full allele name. The rest of the columns consist of corresponding amino acids for each amino acid position for a given allele. 
+Example output of buildAAsegments() for HLA-A, where the selected row outputs are 2, 549, and 800 to illustrate different HLA-A alleles, and selected columns are the first 20 columns of the dataframe, where the first 4 columns consist of the locus, allele, trimmed_allele of 2 fields, and the full allele name. The rest of the columns consist of corresponding amino acids for each amino acid position for a given allele. 
 
 ```
->AA_segments_maker("A")[[1]][c(2,8),1:20]
+>buildAAsegments()("A")[[1]][c(2,8),1:20]
     locus      allele trimmed_allele   allele_name 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16
 2       A 01:01:01:01        A*01:01 A*01:01:01:01 M A V M A P R T L  L  L  L  L  S  G  A
 549     A    02:01:30        A*02:01    A*02:01:30 M A V M A P R T L  V  L  L  L  S  G  A
@@ -59,10 +59,10 @@ Example output of AA_segments_maker for HLA-A, where the selected row outputs ar
 ```
 
 
-The first row of AA_segments_maker is a correspondence table of amino acid position enumerations. Alignments begin with a negative enumeration for the the amino acid positions within the first exon, which encodes the leader peptide, since the leader peptide is eventually cleaved off. The rest of the amino acid positions associated with exons other than exon 1 have positive enumerations. In addition, the alignment counts do not give amino acid positions with inDels a count. The correspondence table was created to begin enumeration at position 1, since it is more standard, and to account for the skipped over positions with inDels. Below is an example of what the correspondence table looks like -- the alignment sequence for the first amino acid postion, -24, corresponds to a more standard beginning enumeration of 1.
+The first row of buildAAsegments() is a correspondence table of amino acid position enumerations. Alignments begin with a negative enumeration for the the amino acid positions within the first exon, which encodes the leader peptide, since the leader peptide is eventually cleaved off. The rest of the amino acid positions associated with exons other than exon 1 have positive enumerations. In addition, the alignment counts do not give amino acid positions with inDels a count. The correspondence table was created to begin enumeration at position 1, since it is more standard, and to account for the skipped over positions with inDels. Below is an example of what the correspondence table looks like -- the alignment sequence for the first amino acid postion, -24, corresponds to a more standard beginning enumeration of 1.
 
 ```
->AA_segments_maker("A")[[1]][1,1:20]
+>buildAAsegments()("A")[[1]][1,1:20]
   locus allele trimmed_allele allele_name   1   2   3   4   5   6   7   8   9  10  11  12
 1  <NA>   <NA>           <NA>        <NA> -24 -23 -22 -21 -20 -19 -18 -17 -16 -15 -14 -13
    13  14  15 16
@@ -70,11 +70,11 @@ The first row of AA_segments_maker is a correspondence table of amino acid posit
 ###
 ```
 
-### motif_finder
-motif_finder splits up the input motif (should be in format Locus*AA_1*AA_2*AA_3, where the amino acid positions are in numerical order). If the motif is not in numerical order, such as DRB1*30Y~28E~26F, the function will rearrange the motif such that the 26F is searched for first. The following output is an example of the 1st, 5th, and 9th DRB1 alleles that have the DRB1*26F~28E~30Y motif. Recall the dataframe is formatted with actual sequence enumeration (starting with 1), but the search is done by matching the input motif, which is based off of alignment enumeration, with the correspondence table. Thus, in the output dataframe, alignment position 26 is equivalent to actual position 55, 28 to 58, and 30 to 60.
+### findMotif()
+findMotif() splits up the input motif (should be in format Locus*AA_1*AA_2*AA_3, where the amino acid positions are in numerical order). If the motif is not in numerical order, such as DRB1*30Y~28E~26F, the function will rearrange the motif such that the 26F is searched for first. The following output is an example of the 1st, 5th, and 9th DRB1 alleles that have the DRB1*26F~28E~30Y motif. Recall the dataframe is formatted with actual sequence enumeration (starting with 1), but the search is done by matching the input motif, which is based off of alignment enumeration, with the correspondence table. Thus, in the output dataframe, alignment position 26 is equivalent to actual position 55, 28 to 58, and 30 to 60.
 
 ```
->motif_finder("DRB1*26F~28E~30Y")[c(1,5,9,10), 1:65]
+>findMotif()("DRB1*26F~28E~30Y")[c(1,5,9,10), 1:65]
 
     locus   allele trimmed_allele   allele_name   1   2   3   4   5   6   7   8   9  10  11
 1    <NA>     <NA>           <NA>          <NA> -29 -28 -27 -26 -25 -24 -23 -22 -21 -20 -19
@@ -96,18 +96,18 @@ motif_finder splits up the input motif (should be in format Locus*AA_1*AA_2*AA_3
 If a motif is not found, an error message is output:
 
 ```
->motif_finder("DRB1*26F~28E~30Z")
+>findMotif()("DRB1*26F~28E~30Z")
 
 Warning message:
-In motif_finder("DRB1*26F~28E~30Z") :
+In findMotif()("DRB1*26F~28E~30Z") :
   Error - zero alleles match this motif. Please try again.
 ```
 
-### dataSubset
-dataSubset manipulates the Solberg dataset to prepare for heatmap generation by adding in a new column containing locus*allele information, reordering the dataset based on population name, and subsetting the dataset to only the locus of interest.
+### dataSubset()
+dataSubset() manipulates the Solberg dataset to prepare for heatmap generation by adding in a new column containing locus*allele information, reordering the dataset based on population name, and subsetting the dataset to only the locus of interest.
 
 ```
-Partial depiction of Solberg Dataset before dataSubset - note population names are out of order, and the data consists of data from multiple HLA loci
+Partial depiction of Solberg Dataset before dataSubset() - note population names are out of order, and the data consists of data from multiple HLA loci
 
 >dataset[c(1,2,300,600, 1000),]
 
@@ -126,9 +126,9 @@ Partial depiction of Solberg Dataset before dataSubset - note population names a
 ```
 
 ```
-Partial depiction of Solberg Dataset after dataSubset - note population names are now in lexicographic order, the only locus of note in the dataset is the locus provided in the motif (i.e. DRB1), and there is a new column, locus_allele, for comparison to the dataframe produced by AA_segments_maker.
+Partial depiction of Solberg Dataset after dataSubset() - note population names are now in lexicographic order, the only locus of note in the dataset is the locus provided in the motif (i.e. DRB1), and there is a new column, locus_allele, for comparison to the dataframe produced by buildAAsegments().
 
->dataSubset(dataset, "DRB1*26F~28E~30Y")[c(1,2,300,600, 1000),]
+>dataSubset()(dataset, "DRB1*26F~28E~30Y")[c(1,2,300,600, 1000),]
 
       dataset        popname contin complex  latit longit         coord locus allele_v2
 8615      lit      Ache_2003    SAM       1    24S    56W       24S 56W  DRB1      0403
@@ -144,11 +144,11 @@ Partial depiction of Solberg Dataset after dataSubset - note population names ar
 10679     03:01     0.11111           21     189   DRB1*03:01
 ```
 
-### coordinate_converter
-coordinate_converter converts coordinates in the Solberg dataset with a cardinal direction to its appropriate numerical enumeration for plotting on a map. North (N), which is above the equator, and East (E), which is east of the prime meridian are positive, while South (S), below the equator, and West (W), west of the prime meridian, are negative. 
+### convertCoordinates()
+convertCoordinates() converts coordinates in the Solberg dataset with a cardinal direction to its appropriate numerical enumeration for plotting on a map. North (N), which is above the equator, and East (E), which is east of the prime meridian are positive, while South (S), below the equator, and West (W), west of the prime meridian, are negative. 
 
 ```
-Partial depiction of Solberg Dataset before coordinate_converter
+Partial depiction of Solberg Dataset before convertCoordinates
 
                    popname contin latit longit
 8615             Ache_2003    SAM   24S    56W
@@ -157,9 +157,9 @@ Partial depiction of Solberg Dataset before coordinate_converter
 ```
 
 ```
-Partial depiction of Solberg Dataset after coordinate_converter
+Partial depiction of Solberg Dataset after convertCoordinates
 
->coordinate_converter(heatmapdata)
+>convertCoordinates(heatmapdata)
 
                    popname contin latit longit
 8615             Ache_2003    SAM   -24    -56
@@ -167,8 +167,8 @@ Partial depiction of Solberg Dataset after coordinate_converter
 17938 BrazilGuaraniNandeva    SAM   -23    -54
 ```
 
-### countSpaces
-countSpaces splits a given string, and white spaces are counted in between split elements. This function was used to count whitespaces in the alignment data downloaded from the ANHIG Github repository to determine the starting amino acid position. See below:
+### countSpaces()
+countSpaces() splits a given string, and white spaces are counted in between split elements. This function was used to count whitespaces in the alignment data downloaded from the ANHIG Github repository to determine the starting amino acid position. See below:
 
 ```
 Prot              -30                              1
@@ -180,7 +180,7 @@ Prot              -30                              1
  A*01:01:01:05           ---- ---------- ---------- ---------- ---------- ---------- 
  A*01:01:01:06           ---- ---------- ---------- ---------- ---------- ---------- 
 ```
-Alignment files from the ANHIG repository are formatted such that a certain number of characters must be present in a given line to maintain the alignment structure, so the start position is not immediately provided in the file. To avoid hard coding a start position, countSpaces was used to calculate the number of spaces between the pipe, which is right underneath the starting count (-30). In order to accomplish this, the following items were needed: 
+Alignment files from the ANHIG repository are formatted such that a certain number of characters must be present in a given line to maintain the alignment structure, so the start position is not immediately provided in the file. To avoid hard coding a start position, countSpaces() was used to calculate the number of spaces between the pipe, which is right underneath the starting count (-30). In order to accomplish this, the following items were needed: 
   1)the number of spaces between the word "Prot" and starting count, "-30",
   2)the number of spaces from the end of the first allele name to the beginning of the amino acid start position
   3)the number of characters in the first allele
@@ -188,15 +188,15 @@ Alignment files from the ANHIG repository are formatted such that a certain numb
   
  ``` 
 #number of whitespaces counted for row 3 in the alignment file 
->countSpaces(alignment[[1]][3])
+>countSpaces()(alignment[[1]][3])
  [1]  1 11  1  1  1  1  1  1  1  1  1
  ``` 
 
-### PALM 
+### PALM() 
 
-PALM produces a heatmap from the manipulated Solberg dataset by using the Generic Mapping Tools (GMT) R Package, which is an interface between R and the GMT Map-Making software. GMT software is required for this function and can be downloaded at https://www.soest.hawaii.edu/gmt/. GMT commands are called via a Bash script through using the gmt.system() function in the GMT R package. The final output of PALM is a heatmap saved as a JPEG in the user's working directory. 
+PALM() produces a heatmap from the manipulated Solberg dataset by using the Generic Mapping Tools (GMT) R Package, which is an interface between R and the GMT Map-Making software. GMT software is required for this function and can be downloaded at https://www.soest.hawaii.edu/gmt/. GMT commands are called via a Bash script through using the gmt.system() function in the GMT R package. The final output of PALM() is a heatmap saved as a JPEG in the user's working directory. 
 
-Two default parameters are set for PALM:
+Two default parameters are set for PALM():
   1) color = TRUE
   Should the heatmap produced be in color? The default for color is set to true for a color heatmap – for a map in grayscale, set color==FALSE.
   2) filter_migrant = TRUE
@@ -204,7 +204,7 @@ Two default parameters are set for PALM:
 
 ```
 #JPEG with color
->PALM(Solberg_datset, "DRB1*26F~28E~30Y" )
+>PALM()(Solberg_datset, "DRB1*26F~28E~30Y" )
 ```
 
 ```{r, out.width='100%', fig.align='center', fig.cap='...'}
@@ -213,7 +213,7 @@ knitr::include_graphics("basemap_color.jpg")
   
 ```
 #JPEG without color
->PALM(Solberg_datset, "DRB1*26F~28E~30Y", color=FALSE)
+>PALM()(Solberg_datset, "DRB1*26F~28E~30Y", color=FALSE)
 ```
 
 ```{r, out.width='100%', fig.align='center', fig.cap='...'}
