--- a/SSHAARP_package/SSHAARP/vignettes/vignette.Rmd
+++ b/SSHAARP_package/SSHAARP/vignettes/vignette.Rmd
@@ -31,13 +31,11 @@ The required Solberg dataset (See: doi: 10.1016/j.humimm.2008.05.001) file is th
         NAM - North America
         NEA - northeast Asia
         OCE - Oceania
-        PNG - Papua New Guinea
         SAM - South America
         SEA - southeast Asia
         SSA - sub-Saharan Africa
         SWA - southwest Asia
-        TWN - Taiwan 
-        
+
   Significantly admixed populations were placed in an **'OTH'**, or other, group
     
     
@@ -49,7 +47,7 @@ The required Solberg dataset (See: doi: 10.1016/j.humimm.2008.05.001) file is th
     
   **locus** - HLA locus information of collected data.
     
-  **allele_v3** - IPD-IMGT/HLA Database version 3.*.* allele names.
+  **allele_v3** - IPD-IMGT/HLA Database version 3_*_* allele names.
     
   **allele.freq** - frequency of the corresponding HLA allele for a population.       
 
@@ -80,48 +78,32 @@ SSHAARP's functions interact with two external datasets and one R package:
 ## Functions
 
 ### BLAASD()
-BLAASD() extracts alignment sequence information for a given locus from the ANHIG/IMGTHLA Github Repository to produce a dataframe, which contains individual amino acid data for each amino acid position for all alleles, for a user-defined HLA locus or loci. The first 4 columns are locus, allele, trimmed allele, and allele_name.
+BLAASD() extracts alignment sequence information for a given locus from the ANHIG/IMGTHLA Github Repository to produce a dataframe, which contains individual amino acid data for each amino acid position for all alleles, for a user-defined HLA locus or loci. The first 4 columns are locus, allele, trimmed allele, and allele_name and are shown as an example below.
 
-Example output of BLAASD() for HLA-A, where the selected row outputs are 2, 549, and 800 to illustrate different HLA-A alleles, and selected columns are the first 20 columns of the dataframe, where the first 4 columns consist of the locus, allele, trimmed_allele of 2 fields, and the full allele name. The rest of the columns consist of corresponding amino acids for each amino acid position for a given allele. 
-
-```
->BLAASD()("A")[[1]][c(2,8),1:20]
-    locus      allele trimmed_allele   allele_name 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16
-2       A 01:01:01:01        A*01:01 A*01:01:01:01 M A V M A P R T L  L  L  L  L  S  G  A
-549     A    02:01:30        A*02:01    A*02:01:30 M A V M A P R T L  V  L  L  L  S  G  A
-800     A    02:30:01        A*02:30    A*02:30:01 M A V M A P R T L  V  L  L  L  S  G  A
-```
-
-
-The first row of BLAASD() is a correspondence table of amino acid position enumerations. Alignments begin with a negative enumeration for the the amino acid positions within the first exon, which encodes the leader peptide, since the leader peptide is eventually cleaved off. The rest of the amino acid positions associated with exons other than exon 1 have positive enumerations. In addition, the alignment counts do not give amino acid positions with inDels a count. The correspondence table was created to begin enumeration at position 1, since it is more standard, and to account for the skipped over positions with inDels. Below is an example of what the correspondence table looks like -- the alignment sequence for the first amino acid postion, -24, corresponds to a more standard beginning enumeration of 1.
+Example output of BLAASD() for HLA-A, where the selected row outputs are 2 and 8 to illustrate different HLA-A alleles, and selected columns are the first 19 columns of the dataframe, where the first 4 columns consist of the locus, allele, trimmed_allele of 2 fields, and the full allele name. The rest of the columns consist of corresponding amino acids for each amino acid position for a given allele. 
 
 ```
->BLAASD()("A")[[1]][1,1:20]
-  locus allele trimmed_allele allele_name   1   2   3   4   5   6   7   8   9  10  11  12
-1  <NA>   <NA>           <NA>        <NA> -24 -23 -22 -21 -20 -19 -18 -17 -16 -15 -14 -13
-   13  14  15 16
-1 -12 -11 -10 -9
-###
+>BLAASD("A")[[1]][c(2,8),1:19]
+  locus       allele trimmed_allele    allele_name -24 -23 -22 -21 -20 -19 -18 -17 -16 -15 -14 -13 -12 -11 -10
+2     A 01:01:01:02N        A*01:01 A*01:01:01:02N   M   A   V   M   A   P   R   T   L   L   L   L   L   S   G
+8     A  01:01:01:08        A*01:01  A*01:01:01:08   M   A   V   M   A   P   R   T   L   L   L   L   L   S   G
 ```
 
 ### findMotif()
-findMotif() splits up the input motif (should be in the following format: `Locus*##$~##$~##$`, where ## identifies a peptide position, and $ identifies an amino acid residue. Motifs can include any number of amino acids and should be in numerical order). If the motif is not in numerical order, such as `DRB1*30Y~28E~26F`, the function will rearrange the motif such that the 26F is searched for first. The following output is an example of the 1st, 5th, and 9th DRB1 alleles that have the `DRB1*26F~28E~30Y` motif. Recall the dataframe is formatted with actual sequence enumeration (starting with 1), but the search is done by matching the input motif, which is based off of alignment enumeration, with the correspondence table. Thus, in the output dataframe, alignment position 26 is equivalent to actual position 55, 28 to 58, and 30 to 60.
+findMotif() parses up the provided amino-acid motif, and should be written as `locus*##$~##$~##$`, where ## identifies a peptide position, and $ identifies an amino acid residue. Motifs can include any number of amino acids positions. The following output is an example of the 1st, 5th, and 9th DRB1 alleles that have the `DRB1*26F~28E~30Y` motif. 
 
 ```
 >findMotif("DRB1*26F~28E~30Y")[c(1,5,9,10), 1:65]
 
-    locus   allele trimmed_allele   allele_name   1   2   3   4   5   6   7   8   9  10  11
-1    <NA>     <NA>           <NA>          <NA> -29 -28 -27 -26 -25 -24 -23 -22 -21 -20 -19
+    locus   allele trimmed_allele   allele_name   -29 -28 -27 -26 -25 -24 -23 -22 -21 -20 -19
 197  DRB1 03:02:04     DRB1*03:02 DRB1*03:02:04   *   *   *   *   *   *   *   *   *   *   *
 240  DRB1    03:38     DRB1*03:38    DRB1*03:38   *   *   *   *   *   *   *   *   *   *   *
 256  DRB1    03:53     DRB1*03:53    DRB1*03:53   *   *   *   *   *   *   *   *   *   *   *
-     12  13  14  15  16  17  18  19  20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
-1   -18 -17 -16 -15 -14 -13 -12 -11 -10 -9 -8 -7 -6 -5 -4 -3 -2 -1  1  2  3  4  5  6  7  8
+     -18 -17 -16 -15 -14 -13 -12 -11 -10 -9 -8 -7 -6 -5 -4 -3 -2 -1  1  2  3  4  5  6  7  8
 197   *   *   *   *   *   *   *   *   *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  R  F  L
 240   *   *   *   *   *   *   *   *   *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  R  F  L
 256   *   *   *   *   *   *   *   *   *  *  *  *  *  *  *  *  *  *  *  *  *  *  *  R  F  L
-    38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55      56 57 58 59 60 61
-1    9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 InDel_1 27 28 29 30 31
+     9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 InDel_1 27 28 29 30 31
 197  E  Y  S  T  S  E  C  H  F  F  N  G  T  E  R  V  R  F       .  L  E  R  Y  F
 240  E  Y  S  T  S  E  C  H  F  F  N  G  T  E  R  V  R  F       .  L  E  R  Y  F
 256  E  Y  S  T  S  E  C  H  F  F  N  G  T  E  R  V  R  F       .  L  E  R  Y  F
@@ -130,7 +112,7 @@ findMotif() splits up the input motif (should be in the following format: `Locus
 If a motif is not found, a dataframe with the motif in one column and an error message in another column is output.
 
 ```
->findMotif()("DRB1*26F~28E~30Z")
+>findMotif("DRB1*26F~28E~30Z")
 
              Motif               Error.message
 1 DRB1*26F~28E~30Z No alleles match this motif
@@ -161,7 +143,7 @@ Partial depiction of Solberg Dataset before dataSubset() - note population names
 ```
 Partial depiction of Solberg Dataset after dataSubset() - note population names are now in lexicographic order, the only locus of note in the dataset is the locus provided in the motif (i.e. DRB1), and there is a new column, locus_allele, for comparison to the dataframe produced by BLAASD().
 
->dataSubset()(dataset, "DRB1*26F~28E~30Y")[c(1,2,300,600, 1000),]
+>dataSubset(dataset, "DRB1*26F~28E~30Y")[c(1,2,300,600, 1000),]
 
       dataset        popname contin complex  latit longit         coord locus allele_v2
 8615      lit      Ache_2003    SAM       1    24S    56W       24S 56W  DRB1      0403
@@ -221,7 +203,7 @@ Alignment files from the ANHIG repository are formatted such that a certain numb
   
  ``` 
 #number of whitespaces counted for row 3 in the alignment file 
->countSpaces()(alignment[[1]][3])
+>countSpaces(alignment[[1]][3])
  [1]  1 11  1  1  1  1  1  1  1  1  1
  ``` 
 
@@ -237,7 +219,7 @@ Two default parameters are set for PALM():
 
 ```
 #JPEG with color
->PALM()(Solberg_datset, "DRB1*26F~28E~30Y" )
+>PALM(Solberg_datset, "DRB1*26F~28E~30Y" )
 ```
 
 ```{r, out.width='100%', fig.align='center', fig.cap='...'}
@@ -246,7 +228,7 @@ knitr::include_graphics("basemap_color.jpg")
   
 ```
 #JPEG without color
->PALM()(Solberg_datset, "DRB1*26F~28E~30Y", color=FALSE)
+>PALM(Solberg_datset, "DRB1*26F~28E~30Y", color=FALSE)
 ```
 
 ```{r, out.width='100%', fig.align='center', fig.cap='...'}
