--- a/SSHAARP_package/SSHAARP/NEWS
+++ b/SSHAARP_package/SSHAARP/NEWS
@@ -1,3 +1,10 @@
+SSHAARP 0.4.0.9000 (09/18/2019)
+-----------------------------
+   * Fixed findMotif() -- parsing code was not included in previous version release.
+   * Changes to vignette documentation.
+   * Changes to documentation in all functions.
+
+
 SSHAARP 0.3.0.9000 (09/10/2019)
 -----------------------------
    * Removed convertCoordinates() as a function and integrated its capabilities into dataSubset().
